Fix scrollbars

--- a/themes/night-sky.css
+++ b/themes/night-sky.css
@@ -35,7 +35,7 @@ a.more-info{
 }
 
 /** Scrollbars **/
-.cm-s-night-sky ::-webkit-scrollbar {
+/*.cm-s-night-sky ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
 }
@@ -49,7 +49,24 @@ a.more-info{
 	width:8px;
     background: rgba(0,0,0,.5);
     border-radius: 4px;
+}*/
+
+.CodeMirror .CodeMirror-vscrollbar{width: 8px; bottom:8px !important;} /*Scrollbar vertical*/
+    
+.CodeMirror ::-webkit-scrollbar {width: 8px; height:8px;}
+.CodeMirror ::-webkit-scrollbar-track {background: none;}
+.CodeMirror-gutter-filler, .CodeMirror-scrollbar-filler { background:none;}
+.CodeMirror ::-webkit-scrollbar-thumb {background: #56595a; border-radius: 4px}
+.CodeMirror ::-webkit-scrollbar-thumb:hover {background: #666666; border-radius: 4px}
+
+.CodeMirror-scrollbar-filler {
+	height:8px !important;
+	width:8px !important;
+	background:none;
 }
+.CodeMirror .CodeMirror-hscrollbar{ height:8px; right:8px !important;} /*Scrollbar horizontal*/
+
+
 
 /** CodeMirror styles **/
 
